--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 :root{
     --main-background-color: gray;
+}
+
+body { 
+    font-family: "Roboto", sans-serif;
 }
 
 .nav-ul {
@@ -22,9 +27,9 @@ a[href="#"][target="_blank"] {
 .container {
     width: 100%;
     max-width: 1200px;
-    margin: 5px;
     display: flex;
     justify-content: space-between;
+    margin: 0 auto
 }
 
 .footer {
@@ -37,10 +42,4 @@ a[href="#"][target="_blank"] {
 .paragraf {
     color: #FFFFFF;
     margin: 20px;
-}
-
-
-
-body { 
-    font-family: "Roboto", sans-serif;
 }
