--- a/style.css
+++ b/style.css
@@ -3,6 +3,26 @@
     --main-background-color: gray;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  ul,
+  ol {
+    list-style-type: none;
+  }
+  
+  a {
+    text-decoration: none;
+    color: black;
+  }
+  
+  body {
+    font-family: "Roboto", sans-serif;
+  }
+
 body { 
     font-family: "Roboto", sans-serif;
 }
@@ -33,13 +53,115 @@ a[href="#"][target="_blank"] {
     margin: 0 auto
 }
 
-.main_title-text {
-    text-align: center;
-}
+header {
+    margin-top: 24px;
+    margin-bottom: 25px;
+  }
+  
+  .header_container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    max-width: 1170px;
+    margin: 0 auto;
+  }
+  
+  .header_left--side {
+    display: flex;
+  }
+  
+  .header_left--image {
+    margin-right: 93px;
+  }
+  
+  .header_navigation {
+    display: flex;
+    align-items: center;
+  }
+  
+  .header_navigation--items {
+    transition: 0.5s;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16.41px;
+    letter-spacing: 0.02em;
+    color: #212121;
+  }
+  
+  .header_navigation--items a:hover {
+    transition: 0.5s;
+    color: #2196f3;
+  }
+  
+  .header_navigation--items:not(:last-child) {
+    margin-right: 50px;
+  }
+  
+  .header_right--link {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16.41px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #757575;
+  }
+  
+  .header_right--link:first-child {
+      margin-right: 50px;
+  }
+  
+  .header_right--link {
+      transition: .5s;
+  }
+  
+  .header_right--link:hover {
+      transition: .5s;
+      color: #2196f3;
+  }
 
 .main_first--section {
+    background-color: #2f303a;
+  }
+  
+  .main_container {
+    width: 100%;
+    max-width: 1170px;
+    margin: 0 auto;
     display: flex;
-}
+    justify-content: center;
+    padding-top: 12.5rem;
+    padding-bottom: 12.5rem;
+  }
+  
+  .main_first--title {
+    margin-bottom: 30px;
+    max-width: 696px;
+    font-family: Roboto;
+    font-size: 44px;
+    font-weight: 900;
+    line-height: 60px;
+    letter-spacing: 0.06em;
+    text-align: center;
+    color: white;
+  }
+  
+  .main_first--content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .main_first--btn {
+    transition: 0.5s;
+    width: 216px;
+    height: 50px;
+    border-radius: 4px;
+    border: 0;
+    background-color: #2196f3;
+    color: white;
+  }
 
 .main_second-section {
     display: flex;
